feat: implementation new corrections for deploy